# Rustrack

./: .gitignore  Cargo.toml  LICENSE
backend/: Cargo.toml
backend/examples/: lif_timing.rs
backend/src/: main.rs
backend/src/api/: error.rs  health.rs  mod.rs  systems.rs  ws.rs
backend/src/configuration/: configuration.rs
backend/src/interpolation/: engine.rs
backend/src/mqtt/: receiver.rs
backend/src/persistence/: mod.rs
backend/src/runtime/: manager.rs  mod.rs  publisher.rs  state.rs
renderer/: Cargo.toml
renderer/src/: camera.rs  lib.rs  shader.wgsl
shared/: Cargo.toml
shared/src/: lib.rs  nurbs.rs
shared/src/lif/: error.rs  map.rs  mod.rs  model.rs  resolve.rs  tests.rs  validate.rs
shared/src/protocol/: protocol.rs
shared/src/vda5050/: mod.rs  state.rs  visualization.rs
simulator/: Cargo.toml
simulator/examples/: warehouse.lif  warehouse_5agv.toml
simulator/src/: agv.rs  broker.rs  config.rs  fleet.rs  main.rs  map.rs  nurbs.rs  publisher.rs  scenario.rs
web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  RCanvas.tsx
web/src/components/: PositionCanvas.tsx  PositionLog.tsx  SystemsPanel.tsx  viewControls.tsx
web/src/lib/: api.ts  mapView.ts  protocol.ts  theme.ts
