[workspace]
resolver = "3"
members = ["backend", "renderer", "shared", "simulator"]

[workspace.dependencies]
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# [build]
# target = "x86_64-pc-windows-msvc"

# [target.'cfg(target_arch = "x86_64")']
# rustflags = ["-C", "target-cpu=x86-64-v3"]
