[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
chrono = { version = "0.4.45", features = ["serde"] }
rumqttc = "0.25.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7.18"
axum = "0.8.9"
serde_json = "1.0.150"
uuid = { version = "1", features = ["v4", "serde"]}
