[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
chrono = { version = "0.4.45", features = ["serde"] }
rumqttc = "0.25.1"
serde = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7.18"
axum = { version = "0.8.9", features = ["ws"] }
bytes = "1.12.0"
serde_json = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"]}
shared = { path = "../shared" }
